--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ p {
   background: white;
   border: 2px solid #999;
   border-radius: 5px;
-  box-shadow: 5px 5px 15px #ccc;
+  box-shadow: 1px 20px 29px #0000002e;
   overflow: hidden;
 }
 
