--- a/index.css
+++ b/index.css
@@ -3,8 +3,9 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;   /* ارتفاع کامل صفحه */
-  background: url(https://biaupload.com/do.php?imgf=org-acc315d547d21.jpg) no-repeat center center fixed;
+  background: url(https://biaupload.com/do.php?imgf=org-6df98aa4def11.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
   font-family: 'Pixelify Sans', sans-serif;
   font-size: 20px;
   margin: 0;
@@ -15,11 +16,11 @@ body {
 }
 
 p {
-    font-size: 8px;
+    font-size: 10px;
 }
 
 .window {
-  max-width: 600px;
+  width: 600px;
   background: white;
   border: 2px solid #999;
   border-radius: 5px;
@@ -28,7 +29,7 @@ p {
 }
 
 .window-header {
-  font-size: small;
+  font-size: 12px;
   background: linear-gradient(to right, #d3e2ff, #fbe8ff);
   padding: 6px 12px;
   display: flex;
@@ -61,7 +62,7 @@ p {
 
 .header-right a {
   color: #666;
-  font-size: smaller;
+  font-size: 12px;
   text-decoration: none;
   margin-left: 6px;
 }
@@ -76,7 +77,7 @@ p {
 .sidebar {
   display: flex;
   flex-direction: column;
-  font-size: small;
+  font-size: 9px;
   width: 200px;
   align-items: center;
 }
@@ -93,7 +94,7 @@ p {
 }
 
 .section-title {
-  font-size: larger;
+  font-size: 15px;
   font-weight: bold;
   margin-bottom: 5px;
   border-bottom: 1px dashed #999;
@@ -103,15 +104,13 @@ p {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
   width: 220px;
-  min-width: 150px;
 }
 
 .card {
   background: #f9f9f9;
-  border: 1px solid #ccc;
-  padding: 12px;
+  padding: 10px;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
@@ -124,8 +123,10 @@ p {
   margin-top: 6px;
 }
 
+
+
 .highlight {
-  background: #d0e6d0;
+  background: #fffdb9;
   padding: 2px 4px;
   border-radius: 4px;
 }
@@ -140,18 +141,20 @@ p {
 @media (max-width: 768px) {
   body {
     padding: 20px;
-    font-size: 20px;
+  }
+
+  p {
+    font-size: 8px;
   }
 
   .window {
-    width: 100%;
+    width: 85%;
     margin: 0 auto;
   }
 
   .window-body {
-    flex-direction: column;
     padding: 15px;
-    gap: 5px;
+    gap: 15px;
   }
 
   .sidebar {
@@ -166,7 +169,7 @@ p {
   }
 
   .card {
-    padding: 12px;
+    padding: 8px;
   }
 
   .card-img {
@@ -177,7 +180,6 @@ p {
 @media (max-width: 480px) {
   body {
     padding: 10px;
-    font-size: 23px;
   }
 
   .window-header {
