--- a/_posts/style/style.css
+++ b/_posts/style/style.css
@@ -1,4 +1,5 @@
 body {
+            direction: rtl;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
@@ -22,7 +23,10 @@ body {
             padding-bottom: 20px;
         }
         
-        h1 {
+        h1,h2,h3 {
+            display: flex;
+            align-items: center;
+            gap: 5px;        
             color: #2c3e50;
             font-size: 28px;
         }
