--- a/_posts/style/style.css
+++ b/_posts/style/style.css
@@ -15,7 +15,12 @@ body {
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        
+        .markdown-body {
+                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    line-height: 1.5;
+    word-wrap: break-word;
+        }
         header {
             text-align: center;
             margin-bottom: 30px;
