--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@
   <header>
     <a href="/">🏠 صفحه اصلی</a>
   </header>
-  <main>
+  <div class="post-content"
     {{ content }}
-  </main>
+    </div>
 </body>
 </html>
