--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
   <header>
     <a href="/">🏠 صفحه اصلی</a>
   </header>
-  <div class="post-content"
+  <div class="post-content">
     {{ content }}
     </div>
 </body>
